--- a/Rdt.CourseFinder/Web.config
+++ b/Rdt.CourseFinder/Web.config
@@ -15,7 +15,8 @@
     </sectionGroup></configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Rdt.CourseFinder-20131224114048;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Rdt.CourseFinder-20131224114048.mdf" />
-    <add name="AtsEntities" connectionString="Data Source=WIN7-PC\SQLEXPRESS;Initial Catalog=Ats360_blank;integrated security=True;" providerName="System.Data.SqlClient" />
+    <add name="AtsEntities" connectionString="Data Source=localhost;Initial Catalog=rh_ats_db;integrated security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="AtsEntities" connectionString="Data Source=localhost;Initial Catalog=rh_ats_db_dummy;integrated security=True;" providerName="System.Data.SqlClient" />-->
     <!--<add name="AtsEntities" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_68911_nitcaa;User ID=DB_68911_nitcaa_user;Password=nitcaa;Integrated Security=False" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
