--- a/Rdt.CourseFinder/Rdt.Ats360.csproj
+++ b/Rdt.CourseFinder/Rdt.Ats360.csproj
@@ -29,7 +29,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,6 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNet.Highcharts">
@@ -150,6 +151,7 @@
     <Compile Include="Controllers\MilestoneController.cs" />
     <Compile Include="Controllers\NavigationController.cs" />
     <Compile Include="Controllers\NotificationController.cs" />
+    <Compile Include="Controllers\PassReturnController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ProjectSearchController.cs" />
     <Compile Include="Controllers\RequirementController.cs" />
@@ -174,6 +176,7 @@
     <Compile Include="Entities\MasterCategory.cs" />
     <Compile Include="Entities\Milestone.cs" />
     <Compile Include="Entities\MilestoneTypes.cs" />
+    <Compile Include="Entities\PassportReturnStatus.cs" />
     <Compile Include="Entities\Project.cs" />
     <Compile Include="Entities\ProjectLog.cs" />
     <Compile Include="Entities\ProjectStatus.cs" />
@@ -282,10 +285,19 @@
     <Compile Include="Migrations\201406090647509_travelPostponement.Designer.cs">
       <DependentUpon>201406090647509_travelPostponement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201406130440000_added_passport_return.cs" />
+    <Compile Include="Migrations\201406130440000_added_passport_return.Designer.cs">
+      <DependentUpon>201406130440000_added_passport_return.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201406130841254_added_passport_return_01.cs" />
+    <Compile Include="Migrations\201406130841254_added_passport_return_01.Designer.cs">
+      <DependentUpon>201406130841254_added_passport_return_01.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CalenderVm.cs" />
     <Compile Include="Models\CandidateSummaryVm.cs" />
     <Compile Include="Models\MedicalDetails.cs" />
+    <Compile Include="Models\PassReturnVm.cs" />
     <Compile Include="Models\PasswordVm.cs" />
     <Compile Include="Models\ProjectSearchVm.cs" />
     <Compile Include="Models\NavigationVm.cs" />
@@ -635,6 +647,12 @@
     <EmbeddedResource Include="Migrations\201406090647509_travelPostponement.resx">
       <DependentUpon>201406090647509_travelPostponement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201406130440000_added_passport_return.resx">
+      <DependentUpon>201406130440000_added_passport_return.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201406130841254_added_passport_return_01.resx">
+      <DependentUpon>201406130841254_added_passport_return_01.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
@@ -710,6 +728,7 @@
     <Content Include="Views\Notification\VisaDeposit.cshtml" />
     <Content Include="Views\Dashboard\Admin.cshtml" />
     <Content Include="Views\TravelPost\PendingApproval.cshtml" />
+    <Content Include="Views\PassReturn\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
