--- a/Rdt.CourseFinder/Rdt.Ats360.csproj
+++ b/Rdt.CourseFinder/Rdt.Ats360.csproj
@@ -29,7 +29,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -154,6 +154,7 @@
     <Compile Include="Controllers\PassReturnController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ProjectSearchController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\RequirementController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Entities\MasterCategory.cs" />
     <Compile Include="Entities\Milestone.cs" />
     <Compile Include="Entities\MilestoneTypes.cs" />
+    <Compile Include="Entities\Notification.cs" />
     <Compile Include="Entities\PassportReturnStatus.cs" />
     <Compile Include="Entities\Project.cs" />
     <Compile Include="Entities\ProjectLog.cs" />
@@ -293,6 +295,14 @@
     <Compile Include="Migrations\201406130841254_added_passport_return_01.Designer.cs">
       <DependentUpon>201406130841254_added_passport_return_01.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201407080532127_added_userbranch_prjtype.cs" />
+    <Compile Include="Migrations\201407080532127_added_userbranch_prjtype.Designer.cs">
+      <DependentUpon>201407080532127_added_userbranch_prjtype.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201407080611538_added_notification.cs" />
+    <Compile Include="Migrations\201407080611538_added_notification.Designer.cs">
+      <DependentUpon>201407080611538_added_notification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CalenderVm.cs" />
     <Compile Include="Models\CandidateSummaryVm.cs" />
@@ -301,10 +311,11 @@
     <Compile Include="Models\PasswordVm.cs" />
     <Compile Include="Models\ProjectSearchVm.cs" />
     <Compile Include="Models\NavigationVm.cs" />
+    <Compile Include="Models\ReportVm.cs" />
     <Compile Include="Models\TravelDetails.cs" />
     <Compile Include="Models\UserCreateVm.cs" />
     <Compile Include="Services\AcHelper.cs" />
-    <Compile Include="Services\CalenderService.cs" />
+    <Compile Include="Services\ReportService.cs" />
     <Compile Include="Services\DbCache.cs" />
     <Compile Include="Infrastructure\EnumExtension.cs" />
     <Compile Include="Infrastructure\NavigationItem.cs" />
@@ -362,6 +373,7 @@
     <Content Include="Content\Images\logo.jpg" />
     <Content Include="Content\Images\main_bg.jpg" />
     <Content Include="Content\Images\project.png" />
+    <Content Include="Content\Images\report.png" />
     <Content Include="Content\Images\search.png" />
     <Content Include="Content\Images\settings.png" />
     <Content Include="Content\Images\student.png" />
@@ -558,15 +570,6 @@
     <Content Include="Views\Search\Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="Microsoft.Office.Core">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>4</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
     <COMReference Include="Microsoft.Office.Interop.Excel">
       <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
       <VersionMajor>1</VersionMajor>
@@ -653,6 +656,12 @@
     <EmbeddedResource Include="Migrations\201406130841254_added_passport_return_01.resx">
       <DependentUpon>201406130841254_added_passport_return_01.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407080532127_added_userbranch_prjtype.resx">
+      <DependentUpon>201407080532127_added_userbranch_prjtype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407080611538_added_notification.resx">
+      <DependentUpon>201407080611538_added_notification.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
@@ -729,6 +738,8 @@
     <Content Include="Views\Dashboard\Admin.cshtml" />
     <Content Include="Views\TravelPost\PendingApproval.cshtml" />
     <Content Include="Views\PassReturn\List.cshtml" />
+    <Content Include="Views\Notification\FromDB.cshtml" />
+    <Content Include="Views\Report\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
